--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,18 @@ version: '3.8'
 networks:
   default:
     name: expense
+volumes:
+  mysql:
+    #external: true # if true you, need to create manually
+      #  docker volume create mysql
 services:
   mysql:
     image: mysql:v1.0.0
     container_name: mysql # --name mysql
+    volumes:
+    - source: mysql
+      target: /var/lib/mysql
+      type: volume #-v volume-name:path/in/container
   backend:
     image: backend:v1.0.0
     container_name: backend
