committed by shravan

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services:
     - source: mysql
       target: /var/lib/mysql
       type: volume #-v volume-name:path/in/container
+    environment:
+      - MYSQL_ROOT_PASSWORD=ExpenseApp@1 
+      - MYSQL_USER=expense 
+      - MYSQL_PASSWORD=ExpenseApp@1 
+      - MYSQL_DATABASE=transactions
+
   backend:
     image: backend:v1.0.0
     container_name: backend
